--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@serwist/next": "^8.4.4",
+    "@serwist/precaching": "^9.5.6",
+    "@serwist/sw": "^9.5.6",
     "framer-motion": "^12.34.2",
     "lucide-react": "^0.574.0",
     "next": "16.1.6",
+    "next-pwa": "^5.6.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
@@ -20,8 +24,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.6",
+    "eslint": "^4.0.0",
+    "eslint-config-next": "^12.0.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
